--- a/src/docker-compose.yml
+++ b/src/docker-compose.yml
@@ -1,4 +1,4 @@
-version: "3.8"
+version: '3.8'
 
 services:
   postgres-service:
@@ -15,11 +15,15 @@ services:
       - ./scripts/init.sql:/docker-entrypoint-initdb.d/create_tabel.sql
 
   backend:
-    build: .
+    build: 
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8081:8081"
     environment:
       - TZ=Europe/Moscow
+    env_file:
+      - .env
     depends_on:
       - postgres-service
     restart: on-failure
